# ChangeLog for net-dialup/umtsmon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/umtsmon/Attic/ChangeLog,v 1.6 2008/01/03 14:22:48 mrness Exp $

  03 Jan 2008; Alin Năstac <mrness@gentoo.org> -umtsmon-0.6.ebuild:
  Remove old version.

*umtsmon-0.7 (11 Oct 2007)

  11 Oct 2007; Alin Năstac <mrness@gentoo.org> +umtsmon-0.7.ebuild:
  Version bump (#195459).

  02 Oct 2007; Alin Năstac <mrness@gentoo.org> umtsmon-0.6.ebuild:
  Use eqmake3 for generating the makefile (#194373). Install README and TODO
  into doc dir.

  19 Jul 2007; Alin Năstac <mrness@gentoo.org> -umtsmon-0.5.ebuild:
  Remove obsolete version.

*umtsmon-0.6 (05 Jun 2007)

  05 Jun 2007; Alin Năstac <mrness@gentoo.org> +umtsmon-0.6.ebuild:
  Version bump (#180441).

*umtsmon-0.5 (31 Mar 2007)

  31 Mar 2007; Alin Năstac <mrness@gentoo.org> +metadata.xml,
  +umtsmon-0.5.ebuild:
  Initial import from bug #171785, thanks to Momsen Reincke <mreincke at gmx
  dot net> and Klaas van Gend <klaas at opentux dot nl>.
