@@ -1,4 +1,6 @@
 DIST umtsmon-0.7.src.tar.gz 232095 RMD160 65be563fcd39d7fd595fcb39b35d8680ef45af5b SHA1 e48a79860e349ca0ab9732f8b8ac3ccb01fecd6b SHA256 296f20ffe48af297a5a9c13bd4e835c396cbba38a8abdcf14c45e977da1f8c8b
+DIST umtsmon-0.8.src.tar.gz 296263 RMD160 fad59c24bc72edf082d560de2a2edcde62fa05a6 SHA1 08ce8b6f75ff3896fc6891c3dfa9c634a567e64f SHA256 59da4d3a362abd145cf0b07f8b94f66b250307da854c2908590ef35bec59f693
 EBUILD umtsmon-0.7.ebuild 1762 RMD160 116166e16b27ecf56ba8610106a17521b4fb3b2d SHA1 fea1c45279d0bc6eb3db9430c3de11b29925d46f SHA256 b3371f56567a9398dad4944b1f4f035f729c4d80e68c4211cf81a253f657b320
-MISC ChangeLog 1057 RMD160 ca1a41608887ab36f531c0cd4a83539f30e1cd7b SHA1 05162c008c731548b680fb8377c9ffd20ec88897 SHA256 0a085c7938becba2efa485da6682db045b580f0f13ec102fda2d88eebf5f2d83
+EBUILD umtsmon-0.8.ebuild 1642 RMD160 6de44d41d2d8ba7f62b65a013ca68ad50fdca6b2 SHA1 244010570c1fd36874333ff8f7dbe37a72f41105 SHA256 6dd19124b06e39901ef8d8fd814469fc464e7b5dd03e51f395246d363c4890ac
+MISC ChangeLog 1216 RMD160 32c58c2c08e1786466d475b331b46736788ac26f SHA1 4b8ce02151c97ae88c9ab53591ef7c51fb7df3b7 SHA256 b2f09a72114475e85ab4ed5ddb20767815e1eb9edf53ebaf0114b59243263776
 MISC metadata.xml 465 RMD160 f7ab91176e0ade08dfded4a332345080e847d725 SHA1 398d8baa744e7dc1e1e5b066fc21ce5bd90846fc SHA256 14495c0d416f75e4a042098abd7ab9842aa3c1de5584512b1e019a37a3550a07
