@@ -1,6 +1,11 @@
 # ChangeLog for net-dialup/umtsmon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/umtsmon/Attic/ChangeLog,v 1.6 2008/01/03 14:22:48 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/umtsmon/Attic/ChangeLog,v 1.7 2008/05/12 11:06:52 pva Exp $
+
+*umtsmon-0.8 (12 May 2008)
+
+  12 May 2008; Peter Volkov <pva@gentoo.org> +umtsmon-0.8.ebuild:
+  Version bump, bug #213132, thank Klaas van Gend for maintaining.
 
   03 Jan 2008; Alin Năstac <mrness@gentoo.org> -umtsmon-0.6.ebuild:
   Remove old version.
